# desktop-fushi

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  build.rs  vercel.json
.github/actions/setup-android/: action.yml
.github/workflows/: android.yml  cd-release.yml  cd-web.yml  ci-android.yml  ci-desktop.yml  ci-quality.yml  ci-web.yml  release.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/mercen/desktopfushi/: FushiBootReceiver.java  FushiOverlayService.java  FushiOverlayView.java  FushiSettings.java  MainActivity.java
android/app/src/main/res/drawable/: ic_fushi_notification.xml  ic_launcher_foreground_fit.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
assets/: desktop-fushi.icns
scripts/: build.ps1  build.py  build.sh  build_android_rust.py  cd.py  ci.py
src/: android.rs  app.rs  canvas.rs  desktop.rs  gpu_canvas.rs  lib.rs  macos.rs  main.rs  math.rs  settings.rs  single_instance.rs  web.rs  wgpu_layer.rs  win32.rs
src/fushi/: constants.rs  mod.rs  motion_input.rs  physics.rs  render.rs  soft_body.rs  svg_reference.rs
web/: astro.config.mjs  package-lock.json  package.json
web/public/: robots.txt  sitemap.xml
web/scripts/: build-wasm.mjs
web/src/pages/: embed.astro  index.astro  oembed.json.ts
web/src/scripts/: fushi-embed.js  fushi-stage.js
